--- a/_layouts/post_layout.html
+++ b/_layouts/post_layout.html
@@ -11,7 +11,7 @@
                     {{ page.time }},  发表于 <span>{{ page.location }}</span>
                 </p>
                 <p class="article-hint">
-                    如果你对本文有任何的建议或者疑问, 可以在
+                    如果您对本文有任何的建议或者疑问, 可以在
                     <a href="https://github.com/kernelmaker/kernelmaker.github.io/issues" target="_blank">这里给我提 Issues</a>, 谢谢! :)
                 </p>
             </header>
