--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,4 +10,4 @@
 <script type="text/javascript" src="/assets/js/jquery.min.js"></script>
 <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
 
-{% include googleanalytics.html %}
+{% include google_analytics.html %}
