--- a/_layouts/post_layout.html
+++ b/_layouts/post_layout.html
@@ -11,12 +11,13 @@
                     {{ page.time }},  发表于 <span>{{ page.location }}</span>
                 </p>
                 <p class="article-hint">
-                    如果您对本文有任何的建议或者疑问, 可以在
+                    如果您对本文有任何的建议或者疑问, 可以下方留言或者在
                     <a href="https://github.com/kernelmaker/kernelmaker.github.io/issues" target="_blank">这里给我提 Issues</a>, 谢谢! :)
                 </p>
             </header>
             {{ content }}
             {% include post_footer.html %}
+            {% include disqus_comment.html %}
         </main>
 
         {% include footer.html %}
