--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,12 @@
   </head>
   <body>
     <div class="container azul">
-      <header class="top row gutters{% if page.title == "Home" %} fadeInLeft animated{% endif %}">
-        <div class="col span_2 center">
-          <!-- TODO: add baseurl to the logo link -->
-          <a href="{{ site.url }}" id="logo" title="{{ site.title }}"
-             style="background-image: url({{site.baseurl}}/public/images/logo.jpeg);"></a>
+      <header class="site-header">
+        <a href="{{ site.url }}" id="logo" title="{{ site.title }}"
+           style="background-image: url({{site.baseurl}}/public/images/logo.jpeg);"></a>
+        <div class="header-text">
+          <h1 class="site-title">{{ site.title }}</h1>
+          <p class="site-tagline">{{ site.description }}</p>
         </div>
         {% include navigation.html %}
       </header>
