--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,9 +2,12 @@
 layout: default
 ---
 
-<article class="single row gutters">
-  <h2>{{ page.title }}</h2>
+<article class="page-single">
+  <header class="page-header">
+    <h1 class="page-title">{{ page.title }}</h1>
+  </header>
 
-  {{ content }}
-  {% include disqus_comment.html %}
+  <div class="page-content">
+    {{ content }}
+  </div>
 </article>
